# SwigPythonLibraryTest

./: CMakeLists.txt  README.md
Application/: Application.cpp  CMakeLists.txt
Swig/: CMakeLists.txt  InterfaceFilename.i
Swig/Python/: CMakeLists.txt  test.py
